# orbit-sentinel

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
data/: detections.json
doc/: ARCHITECTURE.md  CONCEPT_NOTE.es.md  CONCEPT_NOTE.md  HANDOFF.md
doc/_old/: ARCHITECTURE.es.md  CONCEPT_NOTE.en.md  CONCEPT_NOTE.es.md
py/: app.py
web/: index.html
web/data/: detections.json
