[project]
name = "myproj"
version = "0.1.0"
description = "Data analysis environment setup with uv and venv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "pandas>=3.0.2",
    "streamlit>=1.58.0",
    "streamlit-folium>=0.27.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]  # 基本的なエラー検出 + import 整理
